喜马拉雅首页（未完）

--- a/index.html
+++ b/index.html
@@ -106,33 +106,31 @@
         </div>
         <div class="middle" id="dir">
             <a href="#">热门</a>
+            <span></span>
         </div>
         <div class="bottom">
             <div class="left-menu">
-                <ul class="menu" id="menu">
-                    <!--<li>-->
-                        <!--<p class="active hot">热门</p>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<p class="parent-menu not-hot">有声书</p>-->
-                        <!--<div class="child-menu">-->
-                            <!--<a href="#" class="link"><span>言情</span></a>-->
-                            <!--<a href="#"><span>悬疑</span></a>-->
-                            <!--<a href="#"><span>都市</span></a>-->
-                            <!--<a href="#"><span>幻想</span></a>-->
-                            <!--<a href="#"><span>武侠</span></a>-->
-                            <!--<a href="#"><span>文字</span></a>-->
-                            <!--<a href="#"><span>历史</span></a>-->
-                            <!--<a href="#"><span>官场商战</span></a>-->
-                            <!--<a href="#"><span>经管</span></a>-->
-                            <!--<a href="#"><span>社科</span></a>-->
-                            <!--<a href="#"><span>推理</span></a>-->
-                        <!--</div>-->
-                    <!--</li>-->
-                </ul>
+                <ul class="menu" id="menu"></ul>
             </div>
             <div class="main-content">
-
+                <div class="books" id="main-content">
+                </div>
+                <div class="page" id="page">
+                    <ul>
+                        <!--<li class="pre">上一页</li>-->
+                        <!--<li class="page-num active">1</li>-->
+                        <!--<li class="page-num">2</li>-->
+                        <!--<li class="page-num">3</li>-->
+                        <!--<li class="page-num">4</li>-->
+                        <!--<li class="page-num">5</li>-->
+                        <!--<li class="page-num">6</li>-->
+                        <!--<li class="page-num">7</li>-->
+                        <!--<li class="omit">......</li>-->
+                        <!--<li class="page-num">83</li>-->
+                        <!--<li class="page-num">84</li>-->
+                        <!--<li class="next">下一页</li>-->
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
