--- a/test.html
+++ b/test.html
@@ -20,13 +20,62 @@
     </style>
 </head>
 <body>
-<a href="#">click me</a>
+    <li>
+        <p class="active hot">热门</p>
+    </li>
+    <li>
+    <p class="parent-menu not-hot">有声书</p>
+        <div class="child-menu">
+            <a href="#" class="link"><span>言情</span></a>
+            <a href="#"><span>悬疑</span></a>
+            <a href="#"><span>都市</span></a>
+            <a href="#"><span>幻想</span></a>
+            <a href="#"><span>武侠</span></a>
+            <a href="#"><span>文字</span></a>
+            <a href="#"><span>历史</span></a>
+            <a href="#"><span>官场商战</span></a>
+            <a href="#"><span>经管</span></a>
+            <a href="#"><span>社科</span></a>
+            <a href="#"><span>推理</span></a>
+        </div>
+    </li>
+    <div class="book-item">
+    <div class="album-item">
+        <div class="album">
+            <img src="./images/test.png" alt="">
+            <div class="play-count">54736546</div>
+        </div>
+        <div class="album-decorate">
+            <div class="border-one"></div>
+            <div class="border-two"></div>
+            <div class="border-three"></div>
+            <div class="mask"></div>
+        </div>
+    </div>
+    <a href="#" class="title">钢琴随笔</a>
+    <div class="intro">
+        <p class="play-btn"></p>
+        <a href="#">12月7日,和北京初水电费建设路口东方闪电</a>
+    </div>
+</div>
+<ul id="main">
+    <!--p-->
+    <li><p>ppp</p></li>
+    <!--a-->
+    <li><a href="#">aaa</a></li>
+    <!--p-->
+    <li><p><div>div</div></p></li>
+    <!--div-->
+    <li><div>divdiv</div></li>
+    <!--li-->
+    <li>4</li>
+    <!--span-->
+    <li><span>rerer</span></li>
+    <!--a-->
+    <li><a>rerer</a></li>
+</ul>
 </body>
 <script>
-    document.querySelector("a").addEventListener("click",function (ev) {
-        console.log(ev);
-    })
-    var a = {name:"zhangsan"}
-    console.log(a.age);
+
 </script>
 </html>
